    - DDC: Added "ddc" parameter to the "vga" option to make it possible
      either to disable the DDC feature or to read the monitor EDID from file.
  - PCI (general)
    - Added config parameter to set up advanced PCI options. Now it is possible
      to disable ACPI or HPET in case the i440FX chipset is selected.
  - Sound
    - Added PC speaker volume control for the lowlevel sound support.

- GUI and display libraries
    - Added support for calling a headerbar handler after pressing F7 (enabled
      with "cmdmode" option / present in sdl, sdl2, win32 and x).
    - Added support for saving text mode snapshot in BMP format.
    - Write marker to log file by pressing "m" button (guis with "cmdmode" on).
    - X11 keymaps: added new one for Swiss-German and improved Italian map.
    - RFB / vncsrv: VGA features h/v pel panning and split screen now supported.
    - RFB: added support for the pixel format RGB332.
    - win32: added display library option "autoscale" to scale a small
      simulation window by factor 2, 4 or 8 depending in desktop window size.
    - wx: fixed status bar handling to avoid segfaults and deadlocks.

- LGPL'd VGABIOS updated from SVN (fixed text output in VGA graphics modes).

-------------------------------------------------------------------------
Changes in 2.6.11 (January 5, 2020):

- General
  - Added 64-bit support to the NSIS installer script
  - Several fixes in the build system based on Debian patches

- CPU / CPUDB
  - Bugfixes for CPU emulation correctness
    - Many critical bugfixes for Protection Keys, AVX512*, VMX/SVM, SHA, GFNI emulation
  ! Implemented CET (Control Flow Enforcement Technology) emulation according to Intel SDM rev071

- I/O Devices
  - Added missing Cirrus SVGA bitblt feature "transparent color compare"
  - Some fixes in HPET emulation (patch by Oleg)
  - Fixed disk image lock mechanism in the USB MSD case

- BIOS / VGABIOS
  - LGPL'd VGABIOS updated to version 0.7b (Fixed VESA extension 'read EDID'